--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "passport": "^0.5.3",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
-    "passport-linkedin-oauth2": "^2.0.0"
+    "passport-linkedin-oauth2": "^2.0.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
+    "eslint": "^8.35.0",
     "nodemon": "^2.0.20"
   }
 }
