--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
     "nodemon": "^2.0.20"
