--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon --inspect index.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,10 +20,13 @@
     "passport": "^0.5.3",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
-    "passport-linkedin-oauth2": "^2.0.0"
+    "passport-linkedin-oauth2": "^2.0.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "dotenv": "^16.0.3",
+    "eslint": "^8.35.0",
     "nodemon": "^2.0.20"
   }
 }
