--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for techSwipe",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon --inspect index.js",
     "start": "node index.js"
   },
@@ -29,6 +29,8 @@
     "@faker-js/faker": "^7.6.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
-    "nodemon": "^2.0.20"
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
