--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^7.43.0",
+    "@sentry/tracing": "^7.43.0",
     "axios": "^1.3.4",
     "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
